--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">There might be more thing eventually, so you can subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS if you like.</a></p>
+  <p class="rss-subscribe">There might be more things eventually, so you can subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS if you like.</a></p>
 
 </section>
